# recfstab

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: device.rs  error.rs  filter.rs  fstab.rs  lib.rs  main.rs  mount.rs  swap.rs
tests/: integration.rs
