[package]
name = "recfstab"
version = "0.1.1"
edition = "2021"
rust-version = "1.74"
description = "Generate fstab from mounted filesystems (like genfstab)"
license = "MIT"
repository = "https://github.com/LevitateOS/recfstab"
homepage = "https://github.com/LevitateOS/recfstab"
documentation = "https://github.com/LevitateOS/recfstab#readme"
readme = "README.md"
keywords = ["fstab", "linux", "mount", "genfstab", "system"]
categories = ["command-line-utilities", "filesystem"]
authors = ["LevitateOS Contributors"]
exclude = [
    ".github/*",
    "CLAUDE.md",
]

[dependencies]
clap = { version = "4.4", features = ["derive"] }

[profile.release]
strip = true
lto = true
